--- a/src/styles/components/index.scss
+++ b/src/styles/components/index.scss
@@ -2,3 +2,9 @@
 @forward './logo';
 @forward './breadcrumb';
 @forward './products';
+@forward './product-card';
+@forward './icons';
+@forward './pagination';
+@forward './buttons';
+@forward './filters-panel';
+@forward './forms';
