--- a/src/styles/components/_products.scss
+++ b/src/styles/components/_products.scss
@@ -1,4 +1,40 @@
+@use '../utils/colors' as *;
+@use '../utils/variables' as *;
+
 .os-products {
   display: grid;
-  grid-template-columns: 230px 1fr;
+  grid-template-columns: 400px 1fr;
+  grid-gap: 30px;
+  margin-top: 50px;
+
+  &-header {
+    display: flex;
+    align-items: flex-end;
+    justify-content: space-between;
+    margin-bottom: 22px;
+  }
+
+  &-title {
+    font-weight: 400;
+    margin-bottom: 0;
+  }
+
+  .wish-list {
+    font-size: 1.125rem;
+    border-radius: $border-radius;
+    box-shadow: $box-shadow;
+  }
+
+  &-list {
+    display: grid;
+    grid-template-columns: repeat(auto-fit, minmax(430px, 1fr));
+    grid-gap: 30px;
+    margin: 30px 0;
+  }
+
+  &-footer {
+    display: flex;
+    justify-content: center;
+    margin-bottom: 24px;
+  }
 }
