--- a/src/styles/components/_breadcrumb.scss
+++ b/src/styles/components/_breadcrumb.scss
@@ -1,7 +1,7 @@
 @use '../utils/colors' as *;
 
 .os-breadcrumb {
-  .list {
+  &-list {
     display: flex;
     align-items: center;
     margin: 0;
@@ -9,13 +9,13 @@
     list-style: none;
   }
 
-  .item {
+  &-item {
     display: flex;
     align-items: center;
     padding-right: 12px;
 
     &:last-child {
-      .link {
+      .os-breadcrumb-link {
         padding-right: 0;
         font-size: 0.875rem;
         color: $typography-700;
@@ -28,7 +28,7 @@
     }
   }
 
-  .link {
+  &-link {
     text-decoration: none;
     color: $primary-normal;
   }
