--- a/src/styles/components/_logo.scss
+++ b/src/styles/components/_logo.scss
@@ -4,12 +4,12 @@
   display: flex;
   align-items: center;
 
-  .img {
+  &-img {
     width: 91px;
     height: 72px;
   }
 
-  .text {
+  &-text {
     display: inline-block;
     padding-left: 22px;
     font-weight: 600;
