--- a/src/styles/components/_product-card.scss
+++ b/src/styles/components/_product-card.scss
@@ -6,6 +6,7 @@
     box-shadow: $box-shadow;
     border-radius: $border-radius;
     overflow: hidden;
+    background-color: $background-0;
   }
 
   &-img {
