--- a/src/styles/components/_forms.scss
+++ b/src/styles/components/_forms.scss
@@ -111,7 +111,8 @@
         height: 100%;
         right: 40px;
         top: 0;
-        font-size: 1.125rem;
+        font-size: 1.375rem;
+        color: $typography-300;
       }
     }
   }
