--- a/src/styles/components/_products.scss
+++ b/src/styles/components/_products.scss
@@ -3,7 +3,7 @@
 
 .os-products {
   display: grid;
-  grid-template-columns: 400px 1fr;
+  grid-template-columns: 340px 1fr;
   grid-gap: 30px;
   margin-top: 50px;
 
@@ -19,15 +19,20 @@
     margin-bottom: 0;
   }
 
-  .wish-list {
-    font-size: 1.125rem;
-    border-radius: $border-radius;
-    box-shadow: $box-shadow;
+  .wish {
+    &-list {
+      border-radius: $border-radius;
+      box-shadow: $box-shadow;
+    }
+
+    &-icon {
+      font-size: 1.125rem;
+    }
   }
 
   &-list {
     display: grid;
-    grid-template-columns: repeat(auto-fit, minmax(430px, 1fr));
+    grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
     grid-gap: 30px;
     margin: 30px 0;
   }
